// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsForm Published version renders settings intro when draft does not exist 1`] = `
<p
  className="SettingsIntro"
>
  Template settings can only be changed in drafts. Simply select 'Save as Draft' in the top right to access the draft version, and adjust settings as needed.
</p>
`;

exports[`SettingsForm Published version renders settings intro when draft exists 1`] = `
<p
  className="SettingsIntro"
>
  Template settings can only be changed in drafts. Simply select 'Edit Draft' in the top right to access the draft version, and adjust settings as needed.
</p>
`;

exports[`SettingsForm renders without subaccounts 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
  >
    <Panel.Section>
      <Stack>
        <Field
          component={[Function]}
          disabled={false}
          label="Template Name"
          name="name"
          validate={[Function]}
        />
        <CopyField
          disabled={true}
          helpText="A Unique ID for your template, we'll fill this in for you."
          hideCopy={false}
          id="template-id-field"
          label="Template ID"
          name="id"
          value="fake-id"
        />
      </Stack>
    </Panel.Section>
    <Panel.Section>
      <Stack>
        <Field
          component={[Function]}
          disabled={false}
          label="Subject"
          name="content.subject"
          validate={[Function]}
        />
        <Field
          component={[Function]}
          disabled={false}
          domains={
            Array [
              Object {
                "domain": "test.com",
              },
              Object {
                "domain": "verified.com",
              },
            ]
          }
          helpText={null}
          label="From Email"
          name="content.from.email"
          placeholder="example@email.com"
          validate={
            Array [
              [Function],
              [Function],
            ]
          }
        />
        <Field
          component={[Function]}
          disabled={false}
          helpText="A friendly from for your recipients."
          label="From Name"
          name="content.from.name"
        />
        <Field
          component={[Function]}
          disabled={false}
          helpText="An email address recipients can reply to."
          label="Reply To"
          name="content.reply_to"
          validate={[Function]}
        />
        <Field
          component={[Function]}
          disabled={false}
          helpText="Not visible to recipients."
          label="Description"
          name="description"
        />
      </Stack>
    </Panel.Section>
    <Panel.Section>
      <Stack>
        <Field
          component={[Function]}
          disabled={false}
          label="Track Opens"
          name="options.open_tracking"
          parse={[Function]}
          type="checkbox"
        />
        <Field
          component={[Function]}
          disabled={false}
          label="Track Clicks"
          name="options.click_tracking"
          parse={[Function]}
          type="checkbox"
        />
        <Field
          component={[Function]}
          disabled={false}
          helpText="Transactional messages are triggered by a user’s actions on the website, like requesting a password reset, signing up, or making a purchase."
          label="Transactional"
          name="options.transactional"
          parse={[Function]}
          type="checkbox"
        />
      </Stack>
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={true}
        type="submit"
        variant="primary"
      >
        Update Settings
      </Button>
    </Panel.Section>
  </form>
</Fragment>
`;
